HV-1562 JDK9+ build improvements